# PhotoDateRescue

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-exe-alpha.yml
docs/: privacy-and-data-safety.md  release-checklist.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.3.3.md  release-notes-v0.3.4.md
docs/design/: v0.2.0-gui-usability.md  v0.3.0-windows-exe-alpha.md
docs/manual/: apple-photos-import-checklist.md  macos-gui-beginner-guide.md  windows-gui-source-guide.md  xiaomi-native-motion-photo-sample-validation.md
docs/packaging/: macos-gui.md  windows-exe-alpha.md
scripts/: build-macos-app.sh  build-windows-exe.ps1
src/photodaterescue/: __init__.py  __main__.py  android_pull.py  cli.py  decision.py  discovery.py  doctor.py  formats.py  gui_app.py  gui_controller.py  gui_launcher.py  gui_models.py  live_build.py  live_inspect.py  live_probe.py  live_workflow.py  media_decode.py  (+15 more)
tests/: conftest.py  factories.py  test_android_pull.py  test_decision.py  test_discovery.py  test_doctor.py  test_gui_controller.py  test_live_build.py  test_live_inspect.py  test_live_probe.py  test_live_workflow.py  test_media_decode.py  test_metadata.py  test_motion.py  test_motion_extract.py  test_package_smoke.py  test_reconcile.py  test_repair.py  test_reports.py  test_scan.py  test_tools.py  test_unmatched.py  test_wizard.py  test_wizard_prompts.py
